--- a/importing_files_pandas.ipynb
+++ b/importing_files_pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "importing_files_pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBroBToHgMTk85WHkub1pQ",
+      "authorship_tag": "ABX9TyPWX3zuxS6LalHmIP6+0CB7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,18 +128,18 @@
       "metadata": {
         "id": "ng9PK97XM3Cm",
         "colab_type": "code",
+        "outputId": "49e0f965-0f3c-4d7e-a841-7b83e90b6054",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "49e0f965-0f3c-4d7e-a841-7b83e90b6054"
+        }
       },
       "source": [
         "#importing data from google drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive', force_remount = True)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,11 +155,11 @@
       "metadata": {
         "id": "VdXAyg_mb4c3",
         "colab_type": "code",
+        "outputId": "10f3f572-da0a-4852-8753-ef977f38e5a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "10f3f572-da0a-4852-8753-ef977f38e5a9"
+        }
       },
       "source": [
         "#example\n",
@@ -171,7 +171,7 @@
         "file_data = np.loadtxt(file_name, delimiter='\\t', dtype=str)   \n",
         "print(type(file_data))"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,11 +187,11 @@
       "metadata": {
         "id": "WMUi8APJe1Wt",
         "colab_type": "code",
+        "outputId": "18f22d86-3881-4ae0-efe3-9ea21ad8e728",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        },
-        "outputId": "18f22d86-3881-4ae0-efe3-9ea21ad8e728"
+        }
       },
       "source": [
         "file_name1 = '/content/gdrive/My Drive/datasets/seaslugs.txt'\n",
@@ -213,7 +213,7 @@
         "plt.ylabel('percentage of larvae')\n",
         "plt.show()\n"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,11 +242,11 @@
       "metadata": {
         "id": "x1Mu3SlpfWlb",
         "colab_type": "code",
+        "outputId": "c5a364c7-6243-4224-a536-6b4e264e8fc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c5a364c7-6243-4224-a536-6b4e264e8fc6"
+        }
       },
       "source": [
         "#customizing the pandas import \n",
@@ -261,7 +261,7 @@
         "# Print the datatype of data_array to the shell\n",
         "print(type(data_array))\n"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,6 +380,60 @@
         "\n",
         "# Print the head of the DataFrame \n",
         "print(df2.head())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OzG4QIef_U1v",
+        "colab_type": "text"
+      },
+      "source": [
+        "###importing matlab files                                                       \n",
+        "we use SciPy to import matlab files"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3zg3gFRY_bwQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Import package\n",
+        "import scipy.io\n",
+        "\n",
+        "# Load MATLAB file: mat\n",
+        "mat = scipy.io.loadmat('matlab_file.mat')\n",
+        "\n",
+        "# Print the datatype type of mat\n",
+        "print(type(mat))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PIrawrqjARVX",
+        "colab_type": "text"
+      },
+      "source": [
+        "#importing files from web"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FyqXHB47AVT2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
