--- a/importing_files_pandas.ipynb
+++ b/importing_files_pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "importing_files_pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMWB6+WOSNfc4caCRaUxLIE",
+      "authorship_tag": "ABX9TyNIJIPdJaCs02eUiRl1lkJE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1934,8 +1934,8 @@
         "r = requests.get(url)\n",
         "\n",
         "# Decode the JSON data into a dictionary\n",
-        "\n",
         "json_data = r.json()\n",
+        "\n",
         "# Print the Wikipedia page extract\n",
         "pizza_extract = json_data['query']['pages']['24768']['extract']\n",
         "print(pizza_extract)\n"
@@ -1956,6 +1956,40 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MRbMXUEWcGVw",
+        "colab_type": "text"
+      },
+      "source": [
+        "Twitter API"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mg1K0jDYcGi_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Import package\n",
+        "import tweepy\n",
+        "\n",
+        "# Store OAuth authentication credentials in relevant variables\n",
+        "access_token = \"1092294848-aHN7DcRP9B4VMTQIhwqOYiB14YkW92fFO8k8EPy\"\n",
+        "access_token_secret = \"X4dHmhPfaksHcQ7SCbmZa2oYBBVSD2g8uIHXsp5CTaksx\"\n",
+        "consumer_key = \"nZ6EA0FxZ293SxGNg8g8aP0HM\"\n",
+        "consumer_secret = \"fJGEodwe3KiKUnsYJC3VRndj7jevVvXbK2D5EiJ2nehafRgA6i\"\n",
+        "\n",
+        "# Pass OAuth details to tweepy's OAuth handler\n",
+        "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
+        "auth.set_access_token(access_token, access_token_secret)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
