--- a/data_processing_eda_python.ipynb
+++ b/data_processing_eda_python.ipynb
@@ -11,10 +11,9 @@
         "cjY84acY-foa",
         "uphibo8TC-Vo",
         "coVYOoy2QLLm",
-        "lqSkaMN4Zmre",
-        "u0hjBAkgIcVc"
+        "lqSkaMN4Zmre"
       ],
-      "authorship_tag": "ABX9TyODBEM4AvwTGCbGpkDVT0p3",
+      "authorship_tag": "ABX9TyMBxTsnjBicz9vqPk78qV3R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -481,6 +480,127 @@
         "\n",
         "# Print the head of tips\n",
         "print(df.head())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fmsk5MVv_cE_",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Duplicate data\n",
+        " we use  .drop_duplicates() method to remove duplicate data "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mQNCQzLC_h65",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df = df.drop_duplicates()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q1CSms1GR2K6",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Missing data\n",
+        " to deal with missing values we can\n",
+        "\n",
+        "\n",
+        "1.   drop the rows containing missing values\n",
+        "2.   fill the missing values using mean, median, average we use .fillna( ) method                   \n",
+        " ```  syntax : df.fillna( value )  ```\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SBU45fanR6V4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#to drop missing values\n",
+        "df.dropna()               # it will drop all the rows if it has one missing value \n",
+        "\n",
+        "#example\n",
+        "# Create the new DataFrame\n",
+        "tracks = billboard[['year', 'artist', 'track', 'time']]\n",
+        "\n",
+        "# Print info of tracks\n",
+        "print(tracks.info())\n",
+        "\n",
+        "# Drop the duplicates\n",
+        "tracks_no_duplicates = tracks.drop_duplicates()\n",
+        "\n",
+        "# Print info of tracks\n",
+        "print(tracks_no_duplicates.info())\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PMfDVOLxnVc5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#to fill the missing values using .fillna()\n",
+        "df[column_name] = df[column_name].fillna()\n",
+        "\n",
+        "#example \n",
+        "# Calculate the mean of the Ozone column\n",
+        "oz_mean = airquality['Ozone'].mean()\n",
+        "\n",
+        "# Replace all the missing values in the Ozone column with the mean\n",
+        "airquality['Ozone'] = airquality['Ozone'].fillna(oz_mean) \n",
+        "\n",
+        "# Print the info of airquality\n",
+        "print(airquality.info())\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3oN7c1pNy9TU",
+        "colab_type": "text"
+      },
+      "source": [
+        "### asserts method:\n",
+        "  it will return nothing if true else print the error"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aY4jJ82pzIiA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#example\n",
+        "# Assert that there are no missing values\n",
+        "assert pd.notnull(ebola).all().all()            # .all() will return ture or false for every column  again .all() will return the final true or false \n",
+        "\n",
+        "# Assert that all values are >= 0\n",
+        "assert (ebola >= 0).all().all()"
       ],
       "execution_count": 0,
       "outputs": []
