--- a/python_pandas.ipynb
+++ b/python_pandas.ipynb
@@ -5,8 +5,11 @@
     "colab": {
       "name": "python_pandas.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNnyI9dirxuL4zuYXYPjDOs",
+      "collapsed_sections": [
+        "RNc0oux7r4SY",
+        "GDw5TKp526Hy"
+      ],
+      "authorship_tag": "ABX9TyNzewQo/K1iAA4hBd/W1fzR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +35,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#pandas Basics"
+        "#python pandas Basics:\n",
+        "pandas is an open source library, providing high-performance, easy-to-use data structures and data analysis tools for Python."
       ]
     },
     {
@@ -42,8 +46,6 @@
         "colab_type": "text"
       },
       "source": [
-        "Pandas is an open source library, providing high-performance, easy-to-use data structures and data analysis tools for Python.\n",
-        "\n",
         "The DataFrame is one of Pandas' most important data structures. It's basically a way to store tabular data where you can label the rows and the columns. One way to build a DataFrame is from a dictionary"
       ]
     },
@@ -70,8 +72,8 @@
         "          'drives_right':dr,\n",
         "          'cars_per_cap':cpc }\n",
         "\n",
-        "# Build a DataFrame cars from my_dict: cars\n",
-        "cars = pd.DataFrame(my_dict)\n",
+        "# Build a DataFrame from a dictonary\n",
+        "cars = pd.DataFrame(my_dict)          #here name of data frame is cars\n",
         "\n",
         "# Specify row labels of cars\n",
         "row_labels = ['US', 'AUS', 'JPN', 'IN', 'RU', 'MOR', 'EG']\n",
@@ -722,7 +724,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#methods to access the data frame\n",
+        "##methods to access the data frame\n",
         "1. ***loc*** :  is label-based, which means that you have to specify rows and columns based on their row and column labels. \n",
         "\n",
         "2. ***iloc*** : is integer index based, so you have to specify rows and columns by their integer index"
@@ -1203,6 +1205,60 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HBe6_kSoCaJX",
+        "colab_type": "text"
+      },
+      "source": [
+        "### to save the data frame into csv file"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "95jURrzzDE6f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "5b7d91d4-1ad8-453a-9c92-5c491fedbb8f"
+      },
+      "source": [
+        "# to connect gdrive to colab to import dataset\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive', force_remount = True)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hQjeqbb2CYSX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data_frame.to_csv('cars_data', index=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
