--- a/data_visualization_python.ipynb
+++ b/data_visualization_python.ipynb
@@ -5,12 +5,7 @@
     "colab": {
       "name": "data_visualization_python.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "Z27VcSnatdOK",
-        "vCwDxNWmwMXB",
-        "stPg5uqpxc8B",
-        "JrAyS9sJxgIK"
-      ],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyOIA3WD7JqHMtQjzE9XtAS+",
       "include_colab_link": true
     },
