--- a/pandas_dataframe_manipulation.ipynb
+++ b/pandas_dataframe_manipulation.ipynb
@@ -13,9 +13,10 @@
         "XaQLKKzfSbf7",
         "-IzIotg5INAy",
         "nmzSbiKINvOt",
-        "KLJ1l3Jggs28"
+        "KLJ1l3Jggs28",
+        "tgdRtBnfml54"
       ],
-      "authorship_tag": "ABX9TyO01gYIA1RXGihL8p6DP5Sd",
+      "authorship_tag": "ABX9TyPl+57x9Ap66d6/BtCx5lT2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3851,6 +3852,413 @@
             "tags": []
           },
           "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N0p5xzo5s-i-",
+        "colab_type": "text"
+      },
+      "source": [
+        "### pivot table"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sOxfogR8tAs6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "outputId": "f736dd75-45fe-481b-a480-8caf43bcbe8b"
+      },
+      "source": [
+        "users_data_frame"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>weekday</th>\n",
+              "      <th>city</th>\n",
+              "      <th>visitors</th>\n",
+              "      <th>signups</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Sun</td>\n",
+              "      <td>Austin</td>\n",
+              "      <td>139</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Sun</td>\n",
+              "      <td>Dallas</td>\n",
+              "      <td>237</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Mon</td>\n",
+              "      <td>Austin</td>\n",
+              "      <td>326</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Mon</td>\n",
+              "      <td>Dallas</td>\n",
+              "      <td>456</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  weekday    city  visitors  signups\n",
+              "0     Sun  Austin       139        7\n",
+              "1     Sun  Dallas       237       12\n",
+              "2     Mon  Austin       326        3\n",
+              "3     Mon  Dallas       456        5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ahK7Yu1cwBys",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "outputId": "6f488c4f-e531-4cc0-be61-929c963592b0"
+      },
+      "source": [
+        "city_weekday = users_data_frame.pivot_table(index='city', columns='weekday')\n",
+        "city_weekday"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr th {\n",
+              "        text-align: left;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr:last-of-type th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th colspan=\"2\" halign=\"left\">signups</th>\n",
+              "      <th colspan=\"2\" halign=\"left\">visitors</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>weekday</th>\n",
+              "      <th>Mon</th>\n",
+              "      <th>Sun</th>\n",
+              "      <th>Mon</th>\n",
+              "      <th>Sun</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>city</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Austin</th>\n",
+              "      <td>3</td>\n",
+              "      <td>7</td>\n",
+              "      <td>326</td>\n",
+              "      <td>139</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Dallas</th>\n",
+              "      <td>5</td>\n",
+              "      <td>12</td>\n",
+              "      <td>456</td>\n",
+              "      <td>237</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        signups     visitors     \n",
+              "weekday     Mon Sun      Mon  Sun\n",
+              "city                             \n",
+              "Austin        3   7      326  139\n",
+              "Dallas        5  12      456  237"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OSIVywwMwaJk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "outputId": "f3b8c260-824f-4a57-ac77-a54be926ff26"
+      },
+      "source": [
+        "city_weekday = users_data_frame.pivot_table(index='weekday', columns='city')\n",
+        "city_weekday.sort_index()"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr th {\n",
+              "        text-align: left;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr:last-of-type th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th colspan=\"2\" halign=\"left\">signups</th>\n",
+              "      <th colspan=\"2\" halign=\"left\">visitors</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>city</th>\n",
+              "      <th>Austin</th>\n",
+              "      <th>Dallas</th>\n",
+              "      <th>Austin</th>\n",
+              "      <th>Dallas</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>weekday</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Mon</th>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>326</td>\n",
+              "      <td>456</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Sun</th>\n",
+              "      <td>7</td>\n",
+              "      <td>12</td>\n",
+              "      <td>139</td>\n",
+              "      <td>237</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        signups        visitors       \n",
+              "city     Austin Dallas   Austin Dallas\n",
+              "weekday                               \n",
+              "Mon           3      5      326    456\n",
+              "Sun           7     12      139    237"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 151
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VrRR8NqTxUt3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "c161e390-61a5-43b4-ab20-6d810d7becf0"
+      },
+      "source": [
+        "#example to better understand the pivot table\n",
+        "# to have a data frame to show the total number of visitors and signups\n",
+        "signups_visitors = users_data_frame.pivot_table(index='weekday',columns='city', aggfunc=sum, margins=True)\n",
+        "signups_visitors"
+      ],
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr th {\n",
+              "        text-align: left;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr:last-of-type th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th colspan=\"3\" halign=\"left\">signups</th>\n",
+              "      <th colspan=\"3\" halign=\"left\">visitors</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>city</th>\n",
+              "      <th>Austin</th>\n",
+              "      <th>Dallas</th>\n",
+              "      <th>All</th>\n",
+              "      <th>Austin</th>\n",
+              "      <th>Dallas</th>\n",
+              "      <th>All</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>weekday</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Mon</th>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>8</td>\n",
+              "      <td>326</td>\n",
+              "      <td>456</td>\n",
+              "      <td>782</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Sun</th>\n",
+              "      <td>7</td>\n",
+              "      <td>12</td>\n",
+              "      <td>19</td>\n",
+              "      <td>139</td>\n",
+              "      <td>237</td>\n",
+              "      <td>376</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>All</th>\n",
+              "      <td>10</td>\n",
+              "      <td>17</td>\n",
+              "      <td>27</td>\n",
+              "      <td>465</td>\n",
+              "      <td>693</td>\n",
+              "      <td>1158</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        signups            visitors             \n",
+              "city     Austin Dallas All   Austin Dallas   All\n",
+              "weekday                                         \n",
+              "Mon           3      5   8      326    456   782\n",
+              "Sun           7     12  19      139    237   376\n",
+              "All          10     17  27      465    693  1158"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 153
         }
       ]
     }
