--- a/pandas_dataframe_manipulation.ipynb
+++ b/pandas_dataframe_manipulation.ipynb
@@ -18,9 +18,10 @@
         "tgdRtBnfml54",
         "N0p5xzo5s-i-",
         "T_sWACT85noa",
-        "PPcybulWUZFv"
+        "PPcybulWUZFv",
+        "IsIYErPGZIjv"
       ],
-      "authorship_tag": "ABX9TyN7NEXFEmo8xxAUFbxberSz",
+      "authorship_tag": "ABX9TyOKaJOIk6cENZ1P1Irt72s7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +45,7 @@
       "metadata": {
         "id": "PpMB6VnW3Oh9",
         "colab_type": "code",
-        "outputId": "087bb77c-7b3a-426f-b391-8e0043cbeb00",
+        "outputId": "75a2cae9-03e4-4b02-914d-6d06b2f17427",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -55,7 +56,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive', force_remount = True)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5374,16 +5375,16 @@
       "metadata": {
         "id": "BLM5IEPBPJ9v",
         "colab_type": "code",
+        "outputId": "362b069c-eded-4eb8-ae42-00700479d390",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "362b069c-eded-4eb8-ae42-00700479d390"
+        }
       },
       "source": [
         "titanic_data_frame.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5549,16 +5550,16 @@
       "metadata": {
         "id": "QVyWBLyVPdqv",
         "colab_type": "code",
+        "outputId": "977842b4-d4a7-4465-e263-2e79ace531de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "977842b4-d4a7-4465-e263-2e79ace531de"
+        }
       },
       "source": [
         "titanic_indexed_class_embarked.head()"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5731,16 +5732,16 @@
       "metadata": {
         "id": "LtLeAZwgP5pw",
         "colab_type": "code",
+        "outputId": "4c873ba3-3a46-4753-9745-ffd755dc8a68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 521
-        },
-        "outputId": "4c873ba3-3a46-4753-9745-ffd755dc8a68"
+        }
       },
       "source": [
         "by_class.head()"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6075,16 +6076,16 @@
       "metadata": {
         "id": "_botCnVQRJA_",
         "colab_type": "code",
+        "outputId": "58309d76-d91d-4e37-cdf2-5e11690a1615",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 166
-        },
-        "outputId": "58309d76-d91d-4e37-cdf2-5e11690a1615"
+        }
       },
       "source": [
         "total_fare_collected"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6188,16 +6189,16 @@
       "metadata": {
         "id": "LyFMFoRjVDcJ",
         "colab_type": "code",
+        "outputId": "1e45e1d8-4274-4b1b-eaaa-5c4addbdf3f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "1e45e1d8-4274-4b1b-eaaa-5c4addbdf3f0"
+        }
       },
       "source": [
         "feb_sales_2015.head()"
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6289,16 +6290,16 @@
       "metadata": {
         "id": "sm9UARdRVof_",
         "colab_type": "code",
+        "outputId": "9552c6ad-ca81-495e-f276-266af5d9e27c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "9552c6ad-ca81-495e-f276-266af5d9e27c"
+        }
       },
       "source": [
         "feb_sales_2015.tail()"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6404,16 +6405,16 @@
       "metadata": {
         "id": "BlRXnDhdWCsd",
         "colab_type": "code",
+        "outputId": "5c35b33e-9467-40e0-e352-74b8c2e2fc27",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "5c35b33e-9467-40e0-e352-74b8c2e2fc27"
+        }
       },
       "source": [
         "per_day_units_sold.head()"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6505,17 +6506,17 @@
       "metadata": {
         "id": "quBKCwx8W_OB",
         "colab_type": "code",
+        "outputId": "0e52832c-41a1-4903-e888-7a0c8909e9e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
-        },
-        "outputId": "0e52832c-41a1-4903-e888-7a0c8909e9e4"
+        }
       },
       "source": [
         "day_units_sold = groupby_day['Units'].sum()\n",
         "day_units_sold"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6543,7 +6544,343 @@
         "colab_type": "text"
       },
       "source": [
-        "### Using  ***.transform()***\n"
+        "### outliers\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vBe1W20QzIj-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# to detect outliers\n",
+        "# Import zscore\n",
+        "from scipy.stats import zscore"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XkowkJ-wzZti",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "life_expectancy = pd.read_csv('/content/gdrive/My Drive/datasets/gapminder_tidy.csv', header=0, index_col='Country')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r8pbMW8d1E4A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "is_2010 = life_expectancy['Year'] == 2010"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "beC-99Oq2oFj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "life_expectancy_2010 = life_expectancy[is_2010]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uAxy93H52tO6",
+        "colab_type": "code",
+        "outputId": "b07e60bf-844a-4d30-d2e9-38a2e0b519ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        }
+      },
+      "source": [
+        "life_expectancy_2010.head().sort_index()"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Year</th>\n",
+              "      <th>fertility</th>\n",
+              "      <th>life</th>\n",
+              "      <th>population</th>\n",
+              "      <th>child_mortality</th>\n",
+              "      <th>gdp</th>\n",
+              "      <th>region</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Country</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Afghanistan</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>5.659</td>\n",
+              "      <td>59.612</td>\n",
+              "      <td>31411743.0</td>\n",
+              "      <td>105.0</td>\n",
+              "      <td>1637.0</td>\n",
+              "      <td>South Asia</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Albania</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>1.741</td>\n",
+              "      <td>76.780</td>\n",
+              "      <td>3204284.0</td>\n",
+              "      <td>16.6</td>\n",
+              "      <td>9374.0</td>\n",
+              "      <td>Europe &amp; Central Asia</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Algeria</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>2.817</td>\n",
+              "      <td>70.615</td>\n",
+              "      <td>35468208.0</td>\n",
+              "      <td>27.4</td>\n",
+              "      <td>12494.0</td>\n",
+              "      <td>Middle East &amp; North Africa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Angola</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>6.218</td>\n",
+              "      <td>50.689</td>\n",
+              "      <td>19081912.0</td>\n",
+              "      <td>182.5</td>\n",
+              "      <td>7047.0</td>\n",
+              "      <td>Sub-Saharan Africa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Antigua and Barbuda</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>2.130</td>\n",
+              "      <td>75.437</td>\n",
+              "      <td>88710.0</td>\n",
+              "      <td>9.9</td>\n",
+              "      <td>20567.0</td>\n",
+              "      <td>America</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                     Year  fertility  ...      gdp                      region\n",
+              "Country                               ...                                     \n",
+              "Afghanistan          2010      5.659  ...   1637.0                  South Asia\n",
+              "Albania              2010      1.741  ...   9374.0       Europe & Central Asia\n",
+              "Algeria              2010      2.817  ...  12494.0  Middle East & North Africa\n",
+              "Angola               2010      6.218  ...   7047.0          Sub-Saharan Africa\n",
+              "Antigua and Barbuda  2010      2.130  ...  20567.0                     America\n",
+              "\n",
+              "[5 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOksvDMOzZkS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Groupby region\n",
+        " year_2010_outliers = life_expectancy_2010.groupby('region')['life','fertility'].transform(zscore)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pP_OKiyN28Dp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Construct a Boolean Series to identify outliers: outliers\n",
+        "year_2010_outliers = (year_2010_outliers['life'] < -3) | ( year_2010_outliers['fertility'] >3 )         # condition for the value to be outliers\n",
+        "\n",
+        "# Filter gapminder_2010 by the outliers: gm_outliers\n",
+        "life_expectancy_2010_outliers = life_expectancy_2010.loc[year_2010_outliers]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tVkFsYMp3y-d",
+        "colab_type": "code",
+        "outputId": "cd96a19e-7231-4573-9d64-10ed07e1ac32",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        }
+      },
+      "source": [
+        "life_expectancy_2010_outliers"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Year</th>\n",
+              "      <th>fertility</th>\n",
+              "      <th>life</th>\n",
+              "      <th>population</th>\n",
+              "      <th>child_mortality</th>\n",
+              "      <th>gdp</th>\n",
+              "      <th>region</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Country</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Guatemala</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>3.974</td>\n",
+              "      <td>71.100</td>\n",
+              "      <td>14388929.0</td>\n",
+              "      <td>34.5</td>\n",
+              "      <td>6849.0</td>\n",
+              "      <td>America</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Haiti</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>3.350</td>\n",
+              "      <td>45.000</td>\n",
+              "      <td>9993247.0</td>\n",
+              "      <td>208.8</td>\n",
+              "      <td>1518.0</td>\n",
+              "      <td>America</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Tajikistan</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>3.780</td>\n",
+              "      <td>66.830</td>\n",
+              "      <td>6878637.0</td>\n",
+              "      <td>52.6</td>\n",
+              "      <td>2110.0</td>\n",
+              "      <td>Europe &amp; Central Asia</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Timor-Leste</th>\n",
+              "      <td>2010</td>\n",
+              "      <td>6.237</td>\n",
+              "      <td>65.952</td>\n",
+              "      <td>1124355.0</td>\n",
+              "      <td>63.8</td>\n",
+              "      <td>1777.0</td>\n",
+              "      <td>East Asia &amp; Pacific</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Year  fertility  ...     gdp                 region\n",
+              "Country                       ...                               \n",
+              "Guatemala    2010      3.974  ...  6849.0                America\n",
+              "Haiti        2010      3.350  ...  1518.0                America\n",
+              "Tajikistan   2010      3.780  ...  2110.0  Europe & Central Asia\n",
+              "Timor-Leste  2010      6.237  ...  1777.0    East Asia & Pacific\n",
+              "\n",
+              "[4 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 110
+        }
       ]
     }
   ]
